[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
exclude = docs/*, _version.py, .eggs, example/*
max-line-length = 88
docstring-convention = "numpy"
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203, E302, E303
per-file-ignores =
    ipycytoscape/__init__.py:F401
    ipycytoscape/nbextension/__init__.py:F401

